# higger-shuffle_speller-d53926ef7255

./: .gitignore  .gitmodules  README.md  USEME.md  a1_sessionCalib.m  a2_trainClassifiers.m  a3_sessionSpeller.m  loadDataShuffleSpeller.m  plotEOG.m  runnerLoadData.m
Control/: calibStimSched.m  calibStimSchedTest.m  controlCalib.m  controlCalibTest.m  controlShuffle.m  controlShuffleTest.m
Parameters/: DAQparamsApp.m  calibParams.m  classifierParamsApp.m  classifierParamsAppFreq.m  (+3 more)
submodules/daq_gusbamp_64bit/: .gitmodules  CMakeLists.txt  README  RELEASENOTES  test.m
submodules/daq_gusbamp_64bit/doc/: availableFilterInformation.txt
submodules/daq_gusbamp_64bit/ext/DSI-Streamer v.1.05.00/: DSI-Streamer-v.1.05.00.xml
submodules/daq_gusbamp_64bit/ext/DSI-Streamer v.1.05.00/Montages/: DSI-24-CM.mtg  DSI-24-UCLA_AS_default.mtg  DSI-24_AS_default.mtg  DSI-24_MS_default.mtg  DSI-24_transverse.mtg  DSI-7-Flex_LE_default.mtg  DSI-7-Flex_LE_default_0.mtg  DSI-7-Flex_REF_default.mtg  DSI-7_Transverse.mtg
submodules/daq_gusbamp_64bit/ext/DetectParallelPort/: detectParallelPortNumberHex.m
submodules/daq_gusbamp_64bit/ext/DetectParallelPort/html/: detectParallelPortNumberHex.html
submodules/daq_gusbamp_64bit/ext/InpOut/: inpout32.h
submodules/daq_gusbamp_64bit/ext/signalmonitoringgui/: .gitignore  GUIParameters.m  GUITest1.m  RemoteGUITest1.m  RemoteSignalMonitorGUI.m  SignalMonitorGUI.m
submodules/daq_gusbamp_64bit/ext/signalmonitoringgui/html/: GUIParameters.html  GUITest1.html  RemoteSignalMonitorGUI.html  SignalMonitorGUI.html
submodules/daq_gusbamp_64bit/inc/: DAQgUSBamp.h  ringbuffer.h
submodules/daq_gusbamp_64bit/matlab/: DAQDSI.m  DAQbase.m  DAQgUSBAmp.m  DAQgUSBampMex.cpp  DAQgUSBampMex.mexw32  DAQgUSBampMex.mexw64  DAQnoAmp.m  Trigger.m  TriggerParallel.m  addToPyPath.m  buildMex.m  frontEndFilterBP.m  frontEndFilterHP.m  launchGUI.m  loadSessionDataBin.m  toggleNumpyTest.m
submodules/daq_gusbamp_64bit/python/: daq_dsi.py  protocol.py
submodules/daq_gusbamp_64bit/src/: DAQgUSBamp.cpp  stdafx.cpp
submodules/daq_gusbamp_64bit/test/: DAQDSITest.m  DAQgUSBAmpTest.cpp  DAQgUSBAmpTest.m  DAQnoAmpTest.m  launchGUITest.m  loadSessionDataTest.m
(+11 files in other folders)
